--- a/staffview.ui
+++ b/staffview.ui
@@ -26,7 +26,7 @@
     <string>Logout</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="browseButton">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -39,7 +39,7 @@
     <string>Browse Animals</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="addAnimalButton">
    <property name="geometry">
     <rect>
      <x>160</x>
@@ -52,7 +52,7 @@
     <string>Add Animal</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="addClientButton">
    <property name="geometry">
     <rect>
      <x>260</x>
@@ -65,7 +65,7 @@
     <string>Add Client</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="algorithmButton">
    <property name="geometry">
     <rect>
      <x>150</x>
