--- a/addanimalview.ui
+++ b/addanimalview.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>410</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,17 +52,7 @@
     <string>Breed:</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="nameValue">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>60</y>
-     <width>141</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox">
+  <widget class="QComboBox" name="typeDropdown">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -87,7 +77,7 @@
     </property>
    </item>
   </widget>
-  <widget class="QComboBox" name="comboBox_2">
+  <widget class="QComboBox" name="breedDropdown">
    <property name="geometry">
     <rect>
      <x>130</x>
@@ -98,24 +88,141 @@
    </property>
    <item>
     <property name="text">
-     <string>breed1</string>
+     <string>Pitbull</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>breed2</string>
+     <string>Chihuahua</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>breed3</string>
+     <string>Beagle</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>breed4</string>
+     <string>German Shepherd</string>
     </property>
    </item>
+   <item>
+    <property name="text">
+     <string>Poodle</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Pug</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Husky</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Great Dane</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Greyhound</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QPushButton" name="backButton">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>370</y>
+     <width>83</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="animalAddButton">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>320</y>
+     <width>83</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="genderLabel">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>210</y>
+     <width>64</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Gender:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="genderDropdown">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>210</y>
+     <width>131</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>Male</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Female</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="ageLabel">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>260</y>
+     <width>64</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Age:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="nameValue">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>60</y>
+     <width>131</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="ageValue">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>260</y>
+     <width>131</width>
+     <height>25</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
