--- a/addanimalview.ui
+++ b/addanimalview.ui
@@ -6,137 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>410</height>
+    <width>698</width>
+    <height>464</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Animal</string>
   </property>
-  <widget class="QLabel" name="nameLabel">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>60</y>
-     <width>64</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Name:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="typeLabel">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>110</y>
-     <width>64</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Type:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="breedLabel">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>160</y>
-     <width>64</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Breed:</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="typeDropdown">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>110</y>
-     <width>131</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Dog</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Cat</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Bird</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QComboBox" name="breedDropdown">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>160</y>
-     <width>131</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Pitbull</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Chihuahua</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Beagle</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>German Shepherd</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Poodle</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Pug</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Husky</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Great Dane</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Greyhound</string>
-    </property>
-   </item>
-  </widget>
   <widget class="QPushButton" name="backButton">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>370</y>
+     <x>320</x>
+     <y>430</y>
      <width>83</width>
      <height>25</height>
     </rect>
@@ -148,8 +29,8 @@
   <widget class="QPushButton" name="animalAddButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>320</y>
+     <x>200</x>
+     <y>430</y>
      <width>83</width>
      <height>25</height>
     </rect>
@@ -158,73 +39,393 @@
     <string>Add</string>
    </property>
   </widget>
-  <widget class="QLabel" name="genderLabel">
+  <widget class="QLabel" name="sheddingAmountLabel">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>210</y>
-     <width>64</width>
+     <x>281</x>
+     <y>57</y>
+     <width>117</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Gender:</string>
+    <string>Shedding Amount</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="genderDropdown">
+  <widget class="QLabel" name="costofCare">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>210</y>
-     <width>131</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Male</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Female</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLabel" name="ageLabel">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>260</y>
-     <width>64</width>
+     <x>281</x>
+     <y>21</y>
+     <width>80</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Age:</string>
+    <string>Cost of Care</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="nameValue">
+  <widget class="QLabel" name="intelligenceLabel">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>60</y>
-     <width>131</width>
+     <x>280</x>
+     <y>220</y>
+     <width>80</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Intelligence </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="goodforNoviceOwnersLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>250</y>
+     <width>158</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Good for Novice Owners</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="trainingType">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>330</y>
+     <width>90</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Training Type</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="trainingDropDown">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>330</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QSlider" name="sheddingSlider">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>70</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="sheddingBar">
+   <property name="geometry">
+    <rect>
+     <x>461</x>
+     <y>52</y>
+     <width>141</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
+  </widget>
+  <widget class="QSlider" name="aggressionSlider">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>110</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QProgressBar" name="agressionBar">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>100</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="intelligenceDropDown">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>214</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="goodforNoviceOwnersDropDown">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>250</y>
+     <width>141</width>
      <height>25</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="ageValue">
+  <widget class="QComboBox" name="easeofTraingDropDown">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>260</y>
-     <width>131</width>
+     <x>460</x>
+     <y>290</y>
+     <width>141</width>
      <height>25</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QComboBox" name="playfulnessDropDown">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>144</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="solittudialBehaviourDropDown">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>174</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="solitudialBehaviourLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>180</y>
+     <width>132</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Solitudial Behaviour</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="easeofTrainingLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>290</y>
+     <width>105</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ease of Training</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="playfulnessLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>140</y>
+     <width>74</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Playfulness</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="aggressionLabel">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>100</y>
+     <width>73</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Aggression</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="costofCareValue">
+   <property name="geometry">
+    <rect>
+     <x>461</x>
+     <y>21</y>
+     <width>142</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>122</x>
+     <y>23</y>
+     <width>144</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_3">
+    <item>
+     <widget class="QLineEdit" name="nameValue"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="typeDropdown"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="breedDropdown"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="genderDropdown"/>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="ageValue"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="housetrainedDropDown"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="specialNeedsDropDown"/>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lifeSpanValue"/>
+    </item>
+    <item>
+     <widget class="QComboBox" name="sizeDropDown"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>23</y>
+     <width>94</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_4">
+    <item>
+     <widget class="QLabel" name="nameLabel">
+      <property name="text">
+       <string>Name:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="typeLabel">
+      <property name="text">
+       <string>Type:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="breedLabel">
+      <property name="text">
+       <string>Breed:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="genderLabel">
+      <property name="text">
+       <string>Gender:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="ageLabel">
+      <property name="text">
+       <string>Age:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="houseTrainedBox">
+      <property name="text">
+       <string>Housetrained</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="specialNeeds">
+      <property name="text">
+       <string>Special Needs</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="lifeSpan">
+      <property name="text">
+       <string>Life Span</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="sizeLabel">
+      <property name="text">
+       <string>Size</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>sheddingSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>sheddingBar</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>516</x>
+     <y>64</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>516</x>
+     <y>41</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>aggressionSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>agressionBar</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>480</x>
+     <y>121</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>489</x>
+     <y>102</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
